chore: replace JDK 9+ API (Map.of) with JDK 8 equivalents, update version to 2.3.x